crates/uitest/fixtures/ty_check/payable_on_nested_items.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/payable_on_nested_items.fe
---
error[12-0001]: unsupported `#[payable]` attribute on field
  ┌─ payable_on_nested_items.fe:2:5
  │
2 │     #[payable]
  │     ^^^^^^^^^^ `#[payable]` is only supported on init blocks and recv arms

error[12-0001]: unsupported `#[payable]` attribute on variant
  ┌─ payable_on_nested_items.fe:7:5
  │
7 │     #[payable]
  │     ^^^^^^^^^^ `#[payable]` is only supported on init blocks and recv arms

error[12-0001]: unsupported `#[payable]` attribute on fn `baz`
   ┌─ payable_on_nested_items.fe:12:5
   │
12 │     #[payable]
   │     ^^^^^^^^^^ `#[payable]` is only supported on init blocks and recv arms

error[12-0001]: unsupported `#[payable]` attribute on fn `do_thing`
   ┌─ payable_on_nested_items.fe:19:5
   │
19 │     #[payable]
   │     ^^^^^^^^^^ `#[payable]` is only supported on init blocks and recv arms
